Fixed bug where header had no visibily

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,7 +6,6 @@ header {
   padding: 1rem;
 
   .header-content {
-    opacity: 100%;
     color: antiquewhite;
     text-shadow: 1px 1px 3px black;
   }
